--- a/src/app/pages/job-board/company/offer/offer-list/offer-list.component.html
+++ b/src/app/pages/job-board/company/offer/offer-list/offer-list.component.html
@@ -13,7 +13,7 @@
                     [disabled]="!selectedOffers || !selectedOffers.length"></button>
         </ng-template>
         <ng-template pTemplate="right">
-            <button pButton pRipple label="Actualizar" 
+            <button pButton pRipple label="Refrescar"
                     icon="pi pi-refresh" 
                     class="p-button-info"
                     (click)="paginatorOut.emit(paginatorIn)"></button>
