--- a/src/app/pages/shared/components/location-address/location-address.component.html
+++ b/src/app/pages/shared/components/location-address/location-address.component.html
@@ -77,7 +77,7 @@
                               (keypress)="updateValue()"></textarea>
                 </div>
                 <div class="p-field">
-                    <label># casa/departamento:</label>
+                    <label># Casa/Departamento:</label>
                     <input name="number" type="text" pInputText formControlName="number"
                            (keypress)="updateValue()"/>
                 </div>
