--- a/src/app/pages/job-board/company/offer/offer.component.html
+++ b/src/app/pages/job-board/company/offer/offer.component.html
@@ -1,21 +1,19 @@
 <div class="p-grid">
     <div class="p-col-12">
-        <app-offer-list *ngIf="!offerDialog" 
-                        [offersIn]="offers" 
+        <app-offer-list *ngIf="!offerDialog"
+                        [offersIn]="offers"
                         [flagOffers]="flagOffers"
                         [paginatorIn]="paginator"
                         [formOfferIn]="formOffer"
-                        (offersOut)="offers=$event" 
-                        (displayOut)="offerDialog=$event" 
+                        (offersOut)="offers=$event"
+                        (displayOut)="offerDialog=$event"
                         (formOfferOut)="formOffer=$event"
-                        (paginatorOut)="getOffers($event)">    
+                        (paginatorOut)="getOffers($event)">
         </app-offer-list>
         <div *ngIf="offerDialog">
-            <button pButton label="Atras" 
-                    (click)="offerDialog=false">
-            </button>
-            <app-offer-form [offersIn]="offers" 
-                            [formOfferIn]="formOffer" 
+            <app-offer-form [offersIn]="offers"
+                            [formOfferIn]="formOffer"
+                            (offerDialogOut)="offerDialog=$event"
                             (offersOut)="offers=$event"
                             (displayOut)="offerDialog=$event">
             </app-offer-form>
