--- a/src/app/pages/job-board/professional/experience/experience-form/experience-form.component.html
+++ b/src/app/pages/job-board/professional/experience/experience-form/experience-form.component.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <label for="isDisability">
-                <i class="p-error">*</i>Tiene discapacidad:
+                <i class="p-error">*</i>¿Tiene discapacidad?:
                 <i *ngIf="isDisabilityField.valid" class="pi pi-check-circle icon-valid"></i>
                 <i *ngIf="isDisabilityField.invalid && (isDisabilityField.touched || isDisabilityField.dirty)"
                     class="pi pi-times-circle icon-invalid"></i>
