--- a/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
+++ b/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
@@ -323,8 +323,8 @@
             </div>
         </div>
         <div class="p-field p-xl-11 p-lg-11 p-md-11 p-sm-12">
-            <button type="submit" pButton pRipple label="Guardar y Salir" icon="pi pi-save"
-              class="p-button-success p-button-raised" style="display:inline-block;margin-left:40%;width:25%;"></button>
+            <button type="submit" pButton pRipple label="Guardar" icon="pi pi-save"
+              class="p-button-raised" style="display:inline-block;margin-left:40%;width:25%;"></button>
           </div>
     </form>
 </div>
