--- a/src/app/pages/job-board/company/offer/offer-list/offer-list.component.html
+++ b/src/app/pages/job-board/company/offer/offer-list/offer-list.component.html
@@ -2,43 +2,27 @@
 <div class="card" [hidden]="flagOffers">
     <p-toolbar styleClass="p-mb-4">
         <ng-template pTemplate="left">
-            <button pButton pRipple label="Crear" 
-                    icon="pi pi-plus" 
-                    class="p-button-success p-button-rounded"
-                    (click)="openNewFormOffer()"></button>
-            <button pButton pRipple label="Eliminar" 
-                    icon="pi pi-trash" 
-                    class="p-button-danger p-button-rounded p-ml-2"
-                    (click)="deleteOffers()" 
-                    [disabled]="!selectedOffers || !selectedOffers.length"></button>
+            <button pButton pRipple label="Crear" icon="pi pi-plus" class="p-button-success p-button-rounded"
+                (click)="openNewFormOffer()"></button>
+            <button pButton pRipple label="Eliminar" icon="pi pi-trash" class="p-button-danger p-button-rounded p-ml-2"
+                (click)="deleteOffers()" [disabled]="!selectedOffers || !selectedOffers.length"></button>
         </ng-template>
         <ng-template pTemplate="right">
-            <button pButton pRipple label="Refrescar"
-                    icon="pi pi-refresh" 
-                    class="p-button-info"
-                    (click)="paginatorOut.emit(paginatorIn)"></button>
+            <button pButton pRipple label="Refrescar" icon="pi pi-refresh" class="p-button-info"
+                (click)="paginatorOut.emit(paginatorIn)"></button>
         </ng-template>
     </p-toolbar>
-    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total" 
-                (onPageChange)="paginateOffer($event)"></p-paginator>
-    <p-table #dt 
-            [value]="offersIn" 
-            [columns]="colsOffer" 
-            [rows]="paginatorIn.per_page" 
-            [paginator]="false"
-            [(selection)]="selectedOffers" 
-            [rowHover]="true" 
-            dataKey="id" 
-            styleClass="p-datatable-customers"
-            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" 
-            [showCurrentPageReport]="true">
+    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total"
+        (onPageChange)="paginateOffer($event)"></p-paginator>
+    <p-table #dt [value]="offersIn" [columns]="colsOffer" [rows]="paginatorIn.per_page" [paginator]="false"
+        [(selection)]="selectedOffers" [rowHover]="true" dataKey="id" styleClass="p-datatable-customers"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between table-header">
                 <h5 class="p-m-0">Mis Ofertas</h5>
                 <span class="p-input-icon-left">
                     <i class="pi pi-search" (click)="searchOffers($event,search.value)"></i>
-                    <input pInputText #search type="text" 
-                        (keyup)="searchOffers($event,$event.target.value)"
+                    <input pInputText #search type="text" (keyup)="searchOffers($event,$event.target.value)"
                         placeholder="Buscar..." />
                 </span>
             </div>
@@ -53,11 +37,9 @@
                     <p-sortIcon [field]="col.field"></p-sortIcon>
                 </th>
                 <th style="text-align:center">
-                    <button pButton pRipple
-                            type="button" id="btnOptions"
-                            icon="pi pi-cog" class="p-button-secondary"
-                            disabled>
-                    </button>    
+                    <button pButton pRipple type="button" id="btnOptions" icon="pi pi-cog" class="p-button-secondary"
+                        disabled>
+                    </button>
                 </th>
             </tr>
         </ng-template>
@@ -70,23 +52,13 @@
                     {{rowData[col.field]?.name ? rowData[col.field]?.name : rowData[col.field]}}
                 </td>
                 <td style="text-align:center">
-                    <button pButton pRipple
-                            type="button" 
-                            id="btnEdit"
-                            pTooltip="Editar" 
-                            icon="pi pi-pencil"
-                            class="p-button-rounded p-button-warning"
-                            (click)="openEditFormOffer(rowData)"></button>
-                    <button pButton pRipple
-                            type="button" id="btnDelete"
-                            pTooltip="Eliminar" icon="pi pi-trash"
-                            class="p-button-rounded p-button-danger p-ml-2"
-                            (click)="deleteOffer(rowData)"></button>
-                    <button pButton pRipple
-                            type="button" id="btnProfessionals"
-                            pTooltip="Profesionales" icon="pi pi-user"
-                            class="p-button-rounded p-button-info p-ml-2"
-                            (click)="showProfessionals(rowData.id)"></button>
+                    <button pButton pRipple type="button" id="btnEdit" pTooltip="Editar" icon="pi pi-pencil"
+                        class="p-button-rounded p-button-warning" (click)="openEditFormOffer(rowData)"></button>
+                    <button pButton pRipple type="button" id="btnDelete" pTooltip="Eliminar" icon="pi pi-trash"
+                        class="p-button-rounded p-button-danger p-ml-2" (click)="deleteOffer(rowData)"></button>
+                    <button pButton pRipple type="button" id="btnProfessionals" pTooltip="Profesionales"
+                        icon="pi pi-user" class="p-button-rounded p-button-info p-ml-2"
+                        (click)="showProfessionals(rowData.id)"></button>
                 </td>
             </tr>
         </ng-template>
@@ -97,16 +69,9 @@
         </ng-template>
     </p-table>
 </div>
-<p-dialog header="Profesionales" [(visible)]="professionalsDialog" 
-        [modal]="true" 
-        [style]="{width: '50vw'}" 
-        [maximizable]="true" 
-        [baseZIndex]="10000"
-        [draggable]="false" 
-        [resizable]="false"
-        [style]="{width: '70vw'}">
-        <app-offer-professionals [professionalsIn]="professionals"
-                        [paginatorIn]="paginator"
-                        [flagProfessionals]="flagProfessionals">
-        </app-offer-professionals>
+<p-dialog header="Profesionales" [(visible)]="professionalsDialog" [modal]="true" [style]="{width: '50vw'}"
+    [maximizable]="true" [baseZIndex]="10000" [draggable]="false" [resizable]="false" [style]="{width: '70vw'}">
+    <app-offer-professionals [professionalsIn]="professionals" [paginatorIn]="paginator"
+        [flagProfessionals]="flagProfessionals">
+    </app-offer-professionals>
 </p-dialog>
